--- a/tests/distutils/example_pyproject_3/pyproject.cpython.toml
+++ b/tests/distutils/example_pyproject_3/pyproject.cpython.toml
@@ -18,14 +18,17 @@
 #     limitations under the License.
 #
 [build-system]
-# Note: For test purposes, Nuitka is referenced by path, should be "nuitka" in
-# normal projects.
-requires = ["setuptools>=42", "wheel", "file:../../..", "toml"]
-build-backend = "nuitka.distutils.Build"
+requires = [
+    "setuptools>=45",
+    "wheel",
+]
 
-[nuitka]
-# Note: These are not recommended, but they make it obvious to have effect that
-# can be seen, namely using clang in the compilation output. This also uses both
-# supported forms for assigning a boolean option of Nuitka.
-show-scons = true
-clang = ""
+[project]
+name = "some_namespace.some_package"
+version = "0.0.1"
+
+[project.scripts]
+runner="some_namespace.some_package.sub_package:main"
+
+[tool.setuptools.packages.find]
+include = ["some_namespace.some_package*", "runner"]
