Tests: Detect failure to take runtime traces due to system protection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -144,6 +144,7 @@
         "distutils",
         "Doxygen",
         "dpkg",
+        "dtrace",
         "dtruss",
         "dunder",
         "DYLD",
