Optimization: Prepare selecting class through helper function
* Also cleanup how multiple releases are created, adding a
  factory function that takes a list of variables.

* This cannot yet be active due to being incomplete.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -203,6 +203,7 @@
         "Matmult",
         "mdef",
         "metaclass",
+        "metaclasses",
         "METH_NOARGS",
         "METH_VARARGS",
         "MSVC",
