--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2602,6 +2602,7 @@
       - 'data'
     patterns:
       - 'io/_plugins/fits_plugin*.ini'
+    include-pyi-file: 'yes'
 
 - module-name: 'skimage._shared'
   implicit-imports:
@@ -2617,6 +2618,20 @@
         class PytestTester:
           def __init__(self, name):
             pass
+
+- module-name: 'skimage.data'
+  data-files:
+    include-pyi-file: 'yes'
+  implicit-imports:
+    - depends:
+        - '._fetchers'
+
+- module-name: 'skimage.data._fetchers'
+  anti-bloat:
+    - description: 'remove pytest testing framework'
+      replacements_plain:
+        "'PYTEST_CURRENT_TEST' in os.environ": 'False'
+      when: 'not use_pytest'
 
 - module-name: 'skimage.draw'
   implicit-imports:
@@ -2650,6 +2665,10 @@
   implicit-imports:
     - depends:
         - 'skimage.feature._orb_descriptor_positions'
+
+- module-name: 'skimage.filters'
+  data-files:
+    include-pyi-file: 'yes'
 
 - module-name: 'skimage.filters.rank'
   implicit-imports:
@@ -2706,6 +2725,10 @@
         - 'skimage.measure._pnpoly'
 
 - module-name: 'skimage.morphology'
+  data-files:
+    patterns:
+      - '*.npy'
+
   implicit-imports:
     - depends:
         - 'skimage.morphology._convex_hull'
