Added ability to force devnull or None for standard output handles
* This was previously only available on Windows and dependent on no console mode.

* Now this works for all OSes, and both can be selected, None values,
  or redirects to "os.devnull" that swallows everything.

* This works through forced output specs option values.

* Also check forced output spec values for validity, which we
  didn't do so far.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,6 +140,7 @@
         "Dejong",
         "descrgetfunc",
         "devel",
+        "devnull",
         "diffable",
         "distutils",
         "Doxygen",
