--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -784,6 +784,13 @@
         'import ipywidgets.widgets as widgets': 'raise ImportError'
       when: 'not use_ipython'
 
+- module-name: 'huggingface_hub.commands.user'
+  anti-bloat:
+    - description: 'remove IPython reference'
+      replacements_plain:
+        'import ipywidgets.widgets as widgets': 'raise ImportError'
+      when: 'not use_ipython'
+
 - module-name: 'imageio.core.imopen'
   implicit-imports:
     - depends:
