Anaconda: Fix, might be using numpy in a virtualenv not conda env

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1201,11 +1201,12 @@
         setup_code: |
           import os, sys
           library_path = os.path.join("Library", "bin") if os.name == "nt" else "lib"
+          library_path = os.path.join(sys.prefix, library_path)
           library_prefix = "mkl_" if os.name == "nt" else "libmkl_"
         filename_code: |
-          [os.path.join(sys.prefix, library_path, filename)
-           for filename in os.listdir(os.path.join(sys.prefix, library_path))
-           if filename.startswith(library_prefix)]
+          [os.path.join(library_path, filename)
+           for filename in os.listdir(library_path)
+           if filename.startswith(library_prefix)] if os.path.isdir(library_prefix) else []
       dest_path: '.'
       when: 'anaconda'
 
