--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -8,6 +8,12 @@
     - depends:
         - '_dbus_bindings'
 
+- module-name: '_distutils_hack.override'
+  anti-bloat:
+    - description: 'disable distutils hacks'
+      module_code: ''
+      when: 'standalone'
+
 - module-name: '_mplcairo'
   implicit-imports:
     - depends:
@@ -2520,6 +2526,30 @@
   data-files:
     patterns:
       - 'words.txt'
+
+- module-name: 'setuptools.extern'
+# TODO: Vendor importers should maybe get their own thing, pkg_resources does
+# similar, and we might try and avoid duplication between the two of them on
+# some level.
+  implicit-imports:
+    - depends:
+        - 'setuptools._vendor.*'
+        - 'setuptools._vendor.*.*'
+
+- module-name: 'setuptools.monkey'
+  anti-bloat:
+    - description: 'remove MSVC patching on non-Windows'
+      replacements_plain:
+        "msvc = import_module('setuptools.msvc')": 'return'
+      change_function:
+        # TODO: No effect if bytecode is used, we might have to change how
+        # these are done, and try to do it in source code somehow.
+        'patch_for_msvc_specialized_compiler': "'(lambda: None)'"
+      when: 'standalone and not win32'
+  implicit-imports:
+    - depends:
+        - '.msvc'
+      when: 'standalone and win32'
 
 - module-name: 'sgmllib'
   anti-bloat:
