Distutils: Added support for pyproject with "src" folders
* This supports now "tool.setuptools.packages.find" with a
  "where" value with pyproject files.

* It is believed in this form it worked with "setup.py" files,
  but we do not have test coverage of that apparently, so maybe
  it is not true, but then this should fix that too.

--- a/tests/distutils/example_pyproject_3/pyproject.cpython.toml
+++ b/tests/distutils/example_pyproject_3/pyproject.cpython.toml
@@ -31,4 +31,5 @@ version = "0.0.1"
 runner="some_namespace.some_package.sub_package:main"
 
 [tool.setuptools.packages.find]
+where = ["src"]
 include = ["some_namespace.some_package*", "runner"]
