--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -268,6 +268,7 @@
         "roadmap",
         "RPATH",
         "rpaths",
+        "RT_RCDATA",
         "Scons",
         "setattrofunc",
         "Setuptools",
