--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1294,6 +1294,11 @@
         - 'numpy.random.entropy'
         - 'numpy.random.mtrand'
 
+- module-name: 'numpy.random.bit_generator'
+  implicit-imports:
+    - depends:
+        - 'secrets'
+
 - module-name: 'numpy.testing'
   anti-bloat:
     - description: 'remove numpy testing framework'
@@ -4050,6 +4055,11 @@
         - 'urllib.parse'
         - 'urllib.request'
         - 'urllib.response'
+
+- module-name: 'urllib3.packages.six'
+  implicit-imports:
+    - depends:
+        - 'queue'
 
 - module-name: 'uvicorn'
   implicit-imports:
