Optimization: Reduce minimal size of hello world onefile
* This avoids a bunch of extension modules and their DLLs that are not
  always used.

* Of course, this will probably cause issues with hidden dependencies,
  but we should do it at some point.

--- a/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
@@ -88,6 +88,15 @@
       change_function:
         '_test': "'(lambda: None)'"
 
+- module-name: 'email.utils'
+  anti-bloat:
+    - description: 'avoid socket module usage'
+      replacements_plain:
+        'import socket': ''
+      change_function:
+        'make_msgid': 'un-callable'
+      when: 'not use_socket'
+
 - module-name: 'encodings'
   implicit-imports:
     - depends:
@@ -205,6 +214,11 @@
     - description: 'remove module ability to run as a binary'
       change_function:
         '_test': "'(lambda: None)'"
+
+- module-name: 'platform'
+  implicit-imports:
+    - depends:
+        - 'subprocess'
 
 - module-name: 'pyclbr'
   anti-bloat:
