--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2166,6 +2166,11 @@
     - find-dlls-near-module:
         - 'shiboken6'
 
+- module-name: 'PySide6.QtCore'
+  implicit-imports:
+    - depends:
+        - 'PySide6.support.deprecated'
+
 - module-name: 'python_utils.terminal'
   anti-bloat:
     - description: 'remove IPython reference'
