--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2174,7 +2174,24 @@
     - find-dlls-near-module:
         - 'shiboken2'
 
-- module-name: 'PySide6'
+- module-name: 'PySide6.QtCore'
+  implicit-imports:
+    - depends:
+        - 'PySide6.support.deprecated'
+    - post-import-code:
+        - |
+          def myconnect(self, func):
+              if hasattr(func, "im_func"):
+                  if hasattr(func.im_func, "__compiled__"):
+                      myconnect._protected = getattr(myconnect, "_protected", set())
+                      myconnect._protected.add(func)
+
+              return orig_connect(self, func)
+
+          from PySide6 import QtCore
+          orig_connect = QtCore.SignalInstance.connect
+          QtCore.SignalInstance.connect = myconnect
+
   options:
     checks:
       - description: 'PySide6 is a GUI framework'
@@ -2183,11 +2200,6 @@
   import-hacks:
     - find-dlls-near-module:
         - 'shiboken6'
-
-- module-name: 'PySide6.QtCore'
-  implicit-imports:
-    - depends:
-        - 'PySide6.support.deprecated'
 
 - module-name: 'python_utils.terminal'
   anti-bloat:
